# printobs

./: LICENSE  README.md  environment.yml  extract_data.sh  insitu_locations.yaml  insitu_specs.yaml  printobs.py  pyproject.toml  utils.py  variable_def.yaml
printobs/: .insitu_locations.yaml.swp  .utils.py.swp  cli.py  insitu_locations.yaml  model_specs.yaml  quick_check.odt  quicktest.py  utils.py  variable_def.yaml
shortcuts/: .create_shortcuts.py.swp  create_shortcuts.py
tests/: test_printobs.py
