[tool.poetry]
name = "printobs"
version = "0.1.0"
description = ""
authors = ["Patrik Bohlinger <patrikb@met.no>"]

[tool.poetry.scripts]
printobs = 'printobs.cli:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
python-dotenv = "^0.19.2"
scipy = "^1.8.0"
pandas = "^1.4.1"
PyYAML = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
